[package]
name = "bls12-381"
version = "0.10.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[dependencies]
amcl-milagro = { version = "3.2.6", features = ["bls381"] }
clap = "2.33.0"
hash2curve = { version = "0.0.6", features = ["bls"] }
hkdf = "0.8.0"
oldrand = { version = "0.4.2", package = "rand"}
pairing-plus = "0.19.0"
sha2 = "0.8"
rand = "0.7"

[dependencies.bls_sigs_ref]
git = "https://github.com/algorand/bls_sigs_ref"
version = "0.3.0"

#[dependencies.pairing]
#git = "https://github.com/mmaker/pairing"
#branch = "feature/hashing"
#